--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--email-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--email-teaser.html.twig
@@ -16,7 +16,8 @@
       <p>
         <b>{{ node.field_vih_lco_address.fieldDefinition.label }}:</b><br>
         {{ node.field_vih_lco_address.value }},
-        {{ node.field_vih_lco_zip.value }}, {{ node.field_vih_lco_city.value }}
+        {{ node.field_vih_lco_zip.value }}, {{ node.field_vih_lco_city.value }}<br>
+        {{ node.field_vih_lco_municipality.value }}
       </p>
       <p>
         <b>{{ node.field_vih_lco_nationality.fieldDefinition.label }}:</b><br>
@@ -42,7 +43,8 @@
         <b>{{ node.field_vih_lco_adult_address.fieldDefinition.label }}:</b><br>
         {{ node.field_vih_lco_adult_address.value }},
 
-        {{ node.field_vih_lco_adult_zip.value }}, {{ node.field_vih_lco_adult_city.value }}
+        {{ node.field_vih_lco_adult_zip.value }}, {{ node.field_vih_lco_adult_city.value }}<br>
+        {{ node.field_vih_lco_adult_municipality.value }}
       </p>
       <p>
         <b>{{ node.field_vih_lco_adult_nationality.fieldDefinition.label }}:</b><br>
