--- a/docroot/themes/custom/site/src/styles/theme/entity/node/list-advanced/_list-advanced.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/node/list-advanced/_list-advanced.scss
@@ -68,6 +68,12 @@ $list-advanced-inner-left-right-spacing: floor( ( $grid-gutter-width / 2 ) );
   margin: 0;
 }
 
+.entity-list-advanced__emphasize {
+  margin-top: 10px;
+  font-weight: $font-weight-bold;
+  color: $headings-color;
+}
+
 .entity-list-advanced__image {
   position: relative;
 
