--- a/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-person--email-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-person--email-teaser.html.twig
@@ -44,5 +44,8 @@
 <br>
 {{ paragraph.field_vih_ocp_email.value }}
 <p>
-{{ content.field_vih_ocp_ordered_options }}
+  {{ content.field_vih_ocp_ordered_options }}
+</p>
+<p>
+  {{ content.field_vih_ocp_comment }}
 </p>
