--- a/docroot/themes/custom/site/templates/paragraphs/embedded/paragraph--vih-ordered-course-person--embedded.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/embedded/paragraph--vih-ordered-course-person--embedded.html.twig
@@ -22,5 +22,9 @@
         {{ content.field_vih_ocp_ordered_options }}
         {# End - ordered options #}
 
+        {# Begin - comment #}
+        {{ content.field_vih_ocp_comment }}
+        {# End - comement #}
+
     </div>
 </div>
