VI-202 We use 'Contact person' instead of 'Adult'

--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--teaser.html.twig
@@ -97,7 +97,7 @@ view_mode ? view_mode|clean_class,
                     {# Begin - adult information #}
                     <div class="boxy boxy--adult-information">
                         <div class="boxy__heading">
-                            <h3 class="boxy__heading__title">{{ 'Adult' | trans }}</h3>
+                            <h3 class="boxy__heading__title">{{ 'Contact person' | trans }}</h3>
                         </div>
                         <div class="boxy__body">
 
