VI-223 short course, having addition price in resume

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-added-participant.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-added-participant.html.twig
@@ -19,6 +19,9 @@
                             {% if addedParticipantOption['suboption']['name'] %}
                                 / {{ addedParticipantOption['suboption']['name'] }}
                             {% endif %}
+                            {% if (addedParticipantOption['option']['additionalPrice']) %}
+                              (+ kr. {{ addedParticipantOption['option']['additionalPrice'] }})
+                            {% endif %}
                         </li>
                     {% endif %}
                 {% endfor %}
