VI-220 Long course terms and conditions checkbox added

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
@@ -151,7 +151,10 @@
             <!-- Begin - form controls -->
             <div class="partial partial--form-controls">
                 <div class="partial__body">
-                    <div class="text-right">
+                  <div class="terms_and_conditions">
+                  {{ form['terms_and_conditions'] }}
+                  </div>
+                  <div class="text-right">
                         {{ form['actions'] }}
                     </div>
                 </div>
