--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--teaser.html.twig
@@ -143,6 +143,12 @@ view_mode ? view_mode|clean_class,
                             </div>
                             {# End - email #}
 
+                            {# Begin - adult newsletter #}
+                            <div>
+                              {{ content.field_vih_lco_adult_newsletter }}
+                            </div>
+                            {# End - newsletter #}
+
                         </div>
                     </div>
                     {# End - adult information #}
