--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--teaser.html.twig
@@ -13,34 +13,6 @@ view_mode ? view_mode|clean_class,
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
 
-                    {# Begin - course #}
-                    {% if node.field_vih_lco_course.value %}
-                        <div class="partial">
-                            <div class="partial__body">
-                                {{ content.field_vih_lco_course }}
-                            </div>
-                        </div>
-                    {% endif %}
-                    {# End - course #}
-
-                    {# Begin - ordered options #}
-                    {% if node.field_vih_lco_order_course_perio.value %}
-                        <div class="partial partial--ordered-options">
-                            <div class="partial__heading">
-                                <h3 class="partial__heading__title">
-                                    {{ 'Ordered options' | trans }}
-                                </h3>
-                            </div>
-                            <div class="partial__body">
-                                {{ content.field_vih_lco_order_course_perio }}
-                            </div>
-                        </div>
-                    {% endif %}
-                    {# End - ordered options #}
-
-                </div>
-                <div class="col-xs-12 col-sm-6">
-
                     {# Begin - personal information #}
                     <div class="boxy boxy--personal-information">
                         <div class="boxy__heading">
@@ -93,6 +65,9 @@ view_mode ? view_mode|clean_class,
                         </div>
                     </div>
                     {# End - personal information #}
+
+                </div>
+                <div class="col-xs-12 col-sm-6">
 
                     {# Begin - adult information #}
                     <div class="boxy boxy--adult-information">
@@ -153,6 +128,42 @@ view_mode ? view_mode|clean_class,
                     </div>
                     {# End - adult information #}
 
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+
+                    {# Begin - course #}
+                    {% if node.field_vih_lco_course.value %}
+                        <div class="partial">
+                            <div class="partial__body">
+                                {{ content.field_vih_lco_course }}
+                            </div>
+                        </div>
+                    {% endif %}
+                    {# End - course #}
+
+                    {# Begin - ordered options #}
+                    {% if node.field_vih_lco_order_course_perio.value %}
+                        <div class="partial partial--ordered-options">
+                            <div class="partial__heading">
+                                <h3 class="partial__heading__title">
+                                    {{ 'Ordered options' | trans }}
+                                </h3>
+                            </div>
+                            <div class="partial__body">
+                                {{ content.field_vih_lco_order_course_perio }}
+                            </div>
+                        </div>
+                    {% endif %}
+                    {# End - ordered options #}
+
+                </div>
+                <div class="col-xs-12 col-sm-6">
+
                     {# Begin - message #}
                     {{ content.field_vih_lco_message }}
                     {# End - message #}
@@ -171,7 +182,6 @@ view_mode ? view_mode|clean_class,
 
                 </div>
             </div>
-
         </div>
     </div>
 </article>
