VI-220 Event terms and conditions

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
@@ -87,7 +87,9 @@
             </div>
 
             <hr>
-
+            <div class="terms_and_conditions">
+              {{ form['terms_and_conditions'] }}
+            </div>
             <!-- Begin - form controls -->
             <div class="partial partial--form-controls">
                 <div class="partial__body">
