VI-220 Short cource terms and conditions

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
@@ -87,11 +87,13 @@
             </div>
 
             <hr>
-
+            <div class="terms_and_conditions">
+              {{ form['terms_and_conditions'] }}
+            </div>
             <!-- Begin - form controls -->
             <div class="partial partial--form-controls">
                 <div class="partial__body">
-                    {{ form['actions'] }}
+                  {{ form['actions'] }}
                 </div>
             </div>
             <!-- End - form controls -->
