--- a/docroot/themes/custom/site/templates/user/full/user.html.twig
+++ b/docroot/themes/custom/site/templates/user/full/user.html.twig
@@ -24,6 +24,10 @@
                         {{ content.field_vih_user_descr }}
                         {# End - description #}
 
+                        {# Begin - qualifications #}
+                        {{ content.field_vih_user_kvalifikationer }}
+                        {# End - qualifications #}
+
                     </div>
 
                     <div class="col-xs-12 col-md-6">
