VI-202 Long course email notification fix

--- a/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-slot--email-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-slot--email-teaser.html.twig
@@ -40,5 +40,5 @@
 #}
 
 <div>
-    {{ paragraph.field_vih_ocs_title.value }} {{ content.field_vih_ocs_class }}
+    {{ paragraph.field_vih_ocs_title.value }}: {{ content.field_vih_ocs_class }}
 </div>
