--- a/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-option--email-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-option--email-teaser.html.twig
@@ -39,12 +39,12 @@
  */
 #}
 <div>
-    {{ paragraph.field_vih_oo_group_name.value }} {{ paragraph.field_vih_oo_option_name.value }}
+    {{ paragraph.field_vih_oo_group_name.value }}: {{ paragraph.field_vih_oo_option_name.value }}
+      {% if paragraph.field_vih_oo_suboption.value %}
+        /{{ paragraph.field_vih_oo_suboption.value }}
+      {% endif %}
       {% if paragraph.field_vih_oo_price_addition.value %}
         ({{ 'Price addition' | trans }}: {{ paragraph.field_vih_oo_price_addition.value }} {{ 'DKK' | trans}})
-      {% endif %}
-      {% if paragraph.field_vih_oo_suboption.value %}
-            {{ paragraph.field_vih_oo_suboption.value }}
       {% endif %}
 </div>
 
