VI-223 - short course comment and confirmation page display

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
@@ -87,6 +87,8 @@
             </div>
 
             <hr>
+            {{ form['order_comment'] }}
+            <hr>
             <div class="terms_and_conditions">
               {{ form['terms_and_conditions'] }}
             </div>
