--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-short-course-order--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-short-course-order--teaser.html.twig
@@ -72,6 +72,20 @@ view_mode ? view_mode|clean_class,
                     {% endif %}
                     {# End - price #}
 
+                  {% if content.field_vih_sco_comment %}
+                    <!-- Begin - comment -->
+                    <div class="boxy">
+                      <div class="boxy__heading">
+                        <h2 class="boxy__heading__title heading-h4">{{ "Comment" | trans }}</h2>
+                      </div>
+
+                      <div class="boxy__body">
+                        {{ content.field_vih_sco_comment }}
+                      </div>
+                    </div>
+                    <!-- End - comment -->
+                  {% endif %}
+
                 </div>
             </div>
         </div>
