--- a/docroot/themes/custom/site/templates/paragraphs/embedded/paragraph--vih-ordered-course-person--embedded.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/embedded/paragraph--vih-ordered-course-person--embedded.html.twig
@@ -13,17 +13,25 @@
             {{ paragraph.field_vih_ocp_first_name.value }} {{ paragraph.field_vih_ocp_last_name.value }}
         </h4>
         {# End - name #}
-        {{ content.field_vih_ocp_cpr }}
+        <div>
+          {{ "CPR"|t }}: {{ paragraph.field_vih_ocp_cpr.value }}
+        </div>
         {# Begin - email #}
-        {{ content.field_vih_ocp_email }}
+        <div>
+          {{ "Email"|t }}: {{ paragraph.field_vih_ocp_email.value }}
+        </div>
         {# End - email #}
 
         {# Begin - ordered options #}
-        {{ content.field_vih_ocp_ordered_options }}
+        <ul>
+          {{ content.field_vih_ocp_ordered_options }}
+        </ul>
         {# End - ordered options #}
 
         {# Begin - comment #}
-        {{ content.field_vih_ocp_comment }}
+        {% if paragraph.field_vih_ocp_comment.value %}
+          {{ "Comment"|t }}: {{ paragraph.field_vih_ocp_comment.value }}
+        {% endif %}
         {# End - comement #}
 
     </div>
