--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -212,7 +212,7 @@ view_mode ? view_mode|clean_class,
                 {% if node.field_vih_cource_contact_person.value %}
                     <div class="partial partial--teacher">
                         <div class="partial__heading">
-                            <h2 class="partial__heading__title heading-h4">{{ 'Do you have any questions about this class?' | trans }}</h2>
+                            <h2 class="partial__heading__title heading-h4">{{ 'Do you have any questions about this course?' | trans }}</h2>
                         </div>
                         <div class="partial__body">
                             {{ content.field_vih_cource_contact_person }}
